Add format expiration mm/yy

--- a/app/Templates/error_money.html
+++ b/app/Templates/error_money.html
@@ -6,7 +6,7 @@
 <form action="/app/Logic/action.php" method="post">
     <p>Card number<input type="number" minlength="16" size="16" name="card_number"></p>
     <p>Owner<input type="text" name="card_holder"></p>
-    <p>Expiration<input type="month" name="card_expiration"></p>
+    <p>Expiration<input type="text" value="" name="card_expiration" /></p>
     <p>CVV<input type="number" maxlength="3" name="cvv"></p>
     <p>Order number<input type="number" maxlength="16" name="order_number"></p>
     <p style="color: red">Sum<input type="text" name="sum"></p>
